@@ -25,6 +25,7 @@
  * Removed Drawable.draw|clean & Graph.draw|clean|getRCommand|makeR*|GetExtensionMap methods
  * Removed Sample.storeToTemporaryFile|streamToRFormat methods
  * Removed GaussianProcess.GIBBS
+ * Deprecated EllipticalDistribution::getInverseCorrelation
 
 === Documentation ===
  * Add API documentation to common use cases pages
